[package]
name = "cloudnotify"
version = "0.1.0"
authors = ["William Casarin <jb55@jb55.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
smol = "0.1.0"
snow = "0.6.2"
log = "0.4.8"
env_logger = "0.7.1"

[[bin]]
name = "cloudnotify"
path = "main.rs"
